# learn_github

./: .gitignore  Cargo.toml
src/: agent_config.rs  main.rs  scripting.rs
temp/scripts/: test_script.nu  test_script.ts
