[package]
name = "Rust_projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "socks", "native-tls-vendored"] }
rand = "0.8"
zip = "0.6"
tempfile = "3.8"
[target.'cfg(unix)'.dependencies]
# Unix 系统特定的权限设置依赖（如果需要）
