[package]
name = "Rust_projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "socks", "native-tls-vendored"] }
rand = "0.8"
zip = "0.6"
tempfile = "3.8"
defer = "0.1"
wait-timeout = "0.2"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging"
]}
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
winreg = "0.50"
windows = { version = "0.58.0", features = ["Win32_System_SystemInformation"] }

[target.'cfg(unix)'.dependencies]
# Unix 系统特定的权限设置依赖（如果需要）
